--- a/views/user/products.ejs
+++ b/views/user/products.ejs
@@ -37,7 +37,7 @@
   <form id="filterForm" class="space-y-6">
 
     <!-- Search Bar -->
-    <div class="flex items-center gap-2 w-full max-w-3xl mx-auto">
+    <div class="flex items-center gap-1 mb-7 w-full max-w-xl mx-auto">
       <input type="text" id="searchInput" name="search" placeholder="Search products..." class="flex-1 px-4 py-3 border border-gray-200 rounded-l-xl text-gray-700 
                focus:outline-none focus:ring-2 focus:ring-[#F9C22A] focus:border-[#F9C22A] 
                shadow-sm transition-all duration-300" />
@@ -49,7 +49,7 @@
     </div>
 
     <!-- Filters -->
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-5">
+    <div class="grid grid-cols-1 mb-7 sm:grid-cols-2 lg:grid-cols-4 gap-1">
 
       <!-- Sort -->
       <div class="flex flex-col gap-1 ">
