wishlist bug fixed

--- a/views/user/orderDetails.ejs
+++ b/views/user/orderDetails.ejs
@@ -164,7 +164,8 @@
     </div>
 
     <!-- Cancel Entire Order Button -->
-    <% if (order.status !=="Cancelled" && order.paymentStatus !=="Failed" && order.returnStatus !=="Returned" && order.status !== 'Delivered') { %>
+    <% if (order.status !=="Cancelled" && order.paymentStatus !=="Failed" && order.returnStatus !=="Returned" &&
+        order.status !=='Delivered' ) { %>
         <div class="mt-8 text-center">
             <button type="button"
                 class="cancel-order-btn bg-red-600 text-white px-5 py-2 rounded-md font-medium hover:bg-red-700 transition"
